@@ -5,6 +5,11 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - Fix: now also include unassigned shards (as 0% recovered) in calculation of
+   recovery percentage which is displayed per table.
+   Previously it could show '100% recovery done' even if there were still
+   unassigned shards.
+
  - Label the master node in the cluster node list.
 
 2015/12/15 0.17.0
